fix: Fixed issue where on text generation the background would shift and resize improperly

--- a/src/index.css
+++ b/src/index.css
@@ -34,11 +34,13 @@ body > * {
 }
 
 #text {
-	@apply bg-[-40px] sm:bg-left pl-14 sm:pl-[100px];
-  	width: 100%;
+	@apply sm:bg-left pl-14 sm:pl-[100px];
+  	background-position: -20px top;
+        background-attachment: local;
+	width: 100%;
 	max-width: 740px;
   	min-height: 400px;
-  	overflow-y: auto;
+  	overflow-y: hidden;
 	overflow-x: clip;
 	background-color:#FFF;
 	color:#222;
@@ -48,11 +50,10 @@ body > * {
 	resize:none;
 	line-height:40px;
 	padding-right:40px;
-	padding-top:45px;
+	padding-top:50px;
 	padding-bottom:34px;
 	background-image:url(https://static.tumblr.com/maopbtg/E9Bmgtoht/lines.png), url(https://static.tumblr.com/maopbtg/nBUmgtogx/paper.png);
 	background-repeat:repeat-y, repeat;
-	/* background-position: -40px; */
 	-webkit-border-radius:12px;
 	border-radius:12px;
 	-webkit-box-shadow: 0px 2px 14px #000;
